--- a/project-requirements/src/main/resources/application.properties
+++ b/project-requirements/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost/requirements?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=laersonjr
 spring.datasource.password=12345
+
+spring.jpa.hibernate.ddl-auto=update
